--- a/internship platform/section1.html
+++ b/internship platform/section1.html
@@ -27,7 +27,7 @@
            <input type="text" placeholder="location">
            <i class="fas fa-search-location"></i>
            </div>
-           <button>Search your Internship</button>
+           <button type="submit" class="btn">Search your Internship</button>
            </div>
        </div>
        <div id="image">
