--- a/internship platform/section1.html
+++ b/internship platform/section1.html
@@ -20,7 +20,7 @@
            <h1>We're hiring</h1>
            <p>Find the right internship for you to gain work experience and kickstart your career</p>
            <div class="location">
-           <input type="text" placeholder="job title">
+           <input type="text" placeholder="Webd,ML...">
             <i class="fas fa-project-diagram"></i>
            </div>
            <div class="location">
@@ -31,7 +31,7 @@
            </div>
        </div>
        <div id="image">
-           <img src="4151017.jpg" alt="">
+           <img src="4151017.jpg" alt="Intenship-image">
        </div>
     </div>
 </body>
