--- a/internship platform/index1.html
+++ b/internship platform/index1.html
@@ -126,42 +126,62 @@
 </div>
 <!-- footer -->
 <footer>
-  <div id="contact" >
-      
-    <div id="email" data-aos="fade-up" data-aos-duration="6000">
-        <img src="images/mail.png">
-        <p> <a href="#" class="link"> learncoding@learncoding.com</a></p>
-        <img src="images/call.png" alt="Call ">
-        <p> <a href="tel:919991973959" class="link"> 919991973959</a></p>
+      <div class="main-content">
+        <div class="left box">
+          <h2> Follow Us </h2>
+          <div class="content">
+              <div class="social">
+              <a href="#"><span class="fab fa-facebook-f"></span></a>
+              <a href="#"><span class="fab fa-twitter"></span></a>
+              <a href="#"><span class="fab fa-instagram"></span></a>
+              <a href="#"><span class="fab fa-youtube"></span></a>
+            </div>
+          </div>
+        </div>
+        <div class="center box">
+          <h2>Address</h2>
+          <div class="content">
+            <div class="place">
+              <span class="fas fa-map-marker-alt"></span>
+              <span class="text">123 street Colony District State 123 456</span>                  
+            </div>
+            <div class="phone">
+              <span class="fas fa-phone-alt"></span>
+              <span class="text">1234567890</span>
+            </div>
+            <div class="email">
+              <span class="fas fa-envelope"></span>
+              <span class="text">abc@example.com</span>
+            </div>
+          </div>
+        </div>
+        <div class="right box">
+          <h2>Contact us</h2>
+          <div class="content">
+            <form action="#">
+              <div class="email">
+                <div class="text">Email *</div>
+                <input type="email" required>
+              </div>
+              <div class="msg">
+                <div class="text">Message *</div>
+                <textarea rows="2" cols="25" required></textarea>
+              </div>
+              <div class="btn">
+                <button type="submit">Send</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="bottom">
+        <center>
+          <span class="far fa-copyright"></span><span> 2020 All rights reserved.</span>
+        </center>
+      </div>
+    </footer>
 
-    </div>
-    <div id="address" data-aos="fade-up" data-aos-duration="6000">
-        <p>
 
-            <pre>
-<img src="images/address.png" alt="Address icon ">  123 street
- Colony
- District
- State
- 123 456
-    </pre>
-        </p>
-
-    </div>
-
-    <div class="network" data-aos="fade-up" data-aos-duration="6000">
-        <h3 class="footer-titles">Follow Us!</h3>
-        <a href="# " target="_blank " class="icon "><img src="https://uploads-ssl.webflow.com/5966ea9a9217ca534caf139f/5c8dbf0a2f2b67e3b3ba079c_Twitter%20Icon.svg " width="20 " alt="Twitter icon "></a>
-        <a href=" #" target="_blank " class="icon "><img src="https://uploads-ssl.webflow.com/5966ea9a9217ca534caf139f/5c8dbfe70fcf5a0514c5b1da_Instagram%20Icon.svg " width="20 " alt="Instagram icon "></a>
-        <a href=" #" target="_blank " class="icon "><img src="https://uploads-ssl.webflow.com/5966ea9a9217ca534caf139f/5c8dbe42e1e6034fdaba46f6_Facebook%20Icon.svg " width="20 " alt="Facebook Icon "></a>
-        <a href="# " target="_blank " class="icon "><img src="https://uploads-ssl.webflow.com/5966ea9a9217ca534caf139f/5c8dc0002f2b676eb4ba0869_LinkedIn%20Icon.svg " width="20 " alt="LinkedIn Icon "></a>
-        <a href="#" target="_blank " class="icon "><img src="https://uploads-ssl.webflow.com/5966ea9a9217ca534caf139f/5c8dc0112f2b6739c9ba0871_Pinterest%20Icon.svg " width="20 " alt="Pinterest Icon "></a>
-
-    </div>
-
-</div>
-<p class="copyright ">&copy;LearnCoding ,2021
-</p>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
  AOS.init({
