--- a/internship platform/index1.html
+++ b/internship platform/index1.html
@@ -30,13 +30,61 @@
        <li><a href="#">Link4</a></li>
      </ul>
    </nav>
-  <div class="right_sec">
-    <ul>
-      <li> <a href="#"> Login</a></li>
-      <li><a href="#"> Signup</a></li>
-    </ul>
-  </div>
  </div>
+  <!--login form-->
+  <button onclick="document.getElementById('id01').style.display='block'" style="width:auto; position: absolute;top: 10px;right: 100px;background-color: white;color: black;font-size: larger;">Login</button>
+    <div id="id01" class="modal" >
+      <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+      <form class="modal-content animate" action="/action_page.php" method="post">
+          <div class="containerl">
+          <label for="uname"><b>Username</b></label>
+          <input type="text" style="color: white;" placeholder="Enter Username" name="uname" required>
+          <label for="psw"><b>Password</b></label>
+          <input type="password"  style ="color: white;" placeholder="Enter Password" name="psw" required>
+          <button type="submit">Login</button>
+          <label>
+            <input type="checkbox" checked="checked" name="remember"> Remember me
+          </label>
+        </div>
+
+        <div class="containerl" style="background-color:white;">
+          <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+          <span class="psw">Forgot <a href="#">password?</a></span>
+        </div>
+      </form>
+    </div>
+  
+  <!SIGNUP FORM>
+    <button onclick="document.getElementById('id02').style.display='block'" style="width:auto;position: absolute;top: 10px;right: 10px;background-color: white;color: black;font-size: larger;">Sign Up</button>
+    <div id="id02" class="modal1">
+       <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
+      <form class="modal1-content" action="/action_page.php">
+       <div class="containers">
+          <h1>Sign Up</h1>
+          <p>Please fill in this form to create an account.</p>
+          <hr>
+          <label for="email"><b>Email</b></label>
+          <input type="text" placeholder="Enter Email" name="email" required>
+
+          <label for="psw"><b>Password</b></label>
+          <input type="password" placeholder="Enter Password" name="psw" required>
+
+          <label for="psw-repeat"><b>Repeat Password</b></label>
+          <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+          
+          <label>
+            <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+          </label>
+
+          <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+
+          <div class="clearfix">
+          <button type="button" onclick="document.getElementById('id02').style.display='none'" class="cancelbtn1">Cancel</button>
+          <button type="submit" class="signupbtn">Sign Up</button>
+          </div>
+        </div>
+      </form>
+    </div>
 <!-- sec1 -->
   <div id="section1">
     <div id="form">
