--- a/internship platform/index1.html
+++ b/internship platform/index1.html
@@ -32,7 +32,7 @@
    </nav>
  </div>
   <!--login form-->
-  <button onclick="document.getElementById('id01').style.display='block'" style="width:auto; position: absolute;top: 10px;right: 100px;background-color: white;color: black;font-size: larger;">Login</button>
+  <button class="button" onclick="document.getElementById('id01').style.display='block'" style="width:auto; position: absolute;top: 10px;right: 100px;background-color: white;color: black;font-size: larger;">Login</button>
     <div id="id01" class="modal" >
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
       <form class="modal-content animate" action="/action_page.php" method="post">
@@ -54,8 +54,8 @@
       </form>
     </div>
   
-  <!SIGNUP FORM>
-    <button onclick="document.getElementById('id02').style.display='block'" style="width:auto;position: absolute;top: 10px;right: 10px;background-color: white;color: black;font-size: larger;">Sign Up</button>
+  <!-- <!SIGNUP FORM> -->
+    <button class="button" onclick="document.getElementById('id02').style.display='block'" style="width:auto;position: absolute;top: 10px;right: 10px;background-color: white;color: black;font-size: larger;">Sign Up</button>
     <div id="id02" class="modal1">
        <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
       <form class="modal1-content" action="/action_page.php">
