--- a/internship platform/index1.html
+++ b/internship platform/index1.html
@@ -41,7 +41,7 @@
           <input type="text" style="color: white;" placeholder="Enter Username" name="uname" required>
           <label for="psw"><b>Password</b></label>
           <input type="password"  style ="color: white;" placeholder="Enter Password" name="psw" required>
-          <button type="submit">Login</button>
+          <button class="button" type="submit">Login</button>
           <label>
             <input type="checkbox" checked="checked" name="remember"> Remember me
           </label>
