--- a/internship platform/index1.html
+++ b/internship platform/index1.html
@@ -76,7 +76,7 @@
             <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
           </label>
 
-          <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+          <p>By creating an account you agree to our <a href="#" style="color:blue;">Terms & Privacy</a>.</p>
 
           <div class="clearfix">
           <button type="button" onclick="document.getElementById('id02').style.display='none'" class="cancelbtn1">Cancel</button>
