--- a/internship platform/index1.html
+++ b/internship platform/index1.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -110,8 +111,8 @@
 <!-- sec2 -->
 
 <h2>Internships we Provide</h2>
-<div class="img-area">
-    <div class="container2">
+<div class="img-area" >
+    <div class="container2" data-aos="fade-up" data-aos-duration="6000">
         <img src="images/web.png" alt="" class="image">
         <div class="overlay">
           <div class="text">
@@ -121,7 +122,7 @@
           </div>
         </div>
       </div>
-    <div class="container2">
+    <div class="container2" data-aos="fade-up" data-aos-duration="6000">
         <img src="images/aiml.jfif" alt="" class="image">
         <div class="overlay">
             <div class="text">
@@ -131,7 +132,7 @@
             </div>
         </div>
       </div>
-    <div class="container2">
+    <div class="container2" data-aos="fade-up" data-aos-duration="6000">
         <img src="images/andoid.png" alt="" class="image">
         <div class="overlay">
             <div class="text">
@@ -209,7 +210,7 @@
 </div>
 <!-- footer -->
 <footer>
-      <div class="main-content">
+      <div class="main-content"  data-aos="fade-up" data-aos-duration="6000">
         <div class="left box">
           <h2> Follow Us </h2>
           <div class="content">
@@ -221,7 +222,7 @@
             </div>
           </div>
         </div>
-        <div class="center box">
+        <div class="center box"  data-aos="fade-up" data-aos-duration="6000">
           <h2>Address</h2>
           <div class="content">
             <div class="place">
@@ -238,7 +239,7 @@
             </div>
           </div>
         </div>
-        <div class="right box">
+        <div class="right box"  data-aos="fade-up" data-aos-duration="6000">
           <h2>Contact us</h2>
           <div class="content">
             <form action="#">
@@ -276,6 +277,12 @@
  
 </footer>
 <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+   <script>
+    AOS.init();
+   </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    
 <script src="index1.js"></script>
    
    
