--- a/internship platform/index1.html
+++ b/internship platform/index1.html
@@ -119,7 +119,7 @@
       </div>
   </div>
   <div id="image">
-      <img src="images/4151017.jpg" alt="">
+      <img src="images/alphatestersanimation2.gif" alt="">
   </div>
 </div>
 <!-- sec2 -->
@@ -159,37 +159,46 @@
 </div>   
 
 
-<!-- Photo Grid -->
+<!-- Team -->
 <div class="team">
   <h1>
     TEAM
   </h1>
 </div>
-<div class="row"> 
-  <div class="column">
-    <img src="images/c.jfif" style="width:100%">
-    <img src="images/ff.jfif" style="width:100%">
-    <img src="images/a.jfif" style="width:100%">
-  
-    </div>
-    <div class="column">
-        <img src="images/f.jfif" style="width:100%">
-        <img src="images/b.jfif" style="width:100%">
-        <img src="images/d.jfif" style="width:100%">
-        
-    </div>  
-    <div class="column">
-        <img src="images/a.jfif" style="width:100%">
-        <img src="images/d.jfif" style="width:100%">
-        <img src="images/h.jfif" style="width:100%">
-        
-    </div>
-    <div class="column">
-        <img src="images/b.jfif" style="width:100%">
-        <img src="images/c.jfif" style="width:100%">
-        <img src="images/k.jfif" style="width:100%">
-
-    </div>
+<div class="img-container">
+  <div class="img-box">
+      <div class="imagesss">
+          <img src="images/a.jfif" >
+      </div>
+      <div class="img-content">
+          <div>
+              <h2>Name</h2>
+              <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+      </div>
+  </div>
+  <div class="img-box">
+      <div class="imagesss">
+          <img src="images/b.jfif" >
+      </div>
+      <div class="img-content">
+          <div>
+              <h2>Name</h2>
+              <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+      </div>
+  </div>
+  <div class="img-box">
+      <div class="imagesss">
+          <img src="images/c.jfif" >
+      </div>
+      <div class="img-content">
+          <div>
+              <h2>Name</h2>
+              <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+      </div>
+  </div>
 </div>
 
 <!-- Testimonial-->
