--- a/internship platform/index1.html
+++ b/internship platform/index1.html
@@ -25,10 +25,10 @@
           <i class="fas fa-bars"></i> 
      </label>
      <ul>
-       <li><a class="active" href="#">Link1</a></li>
-       <li><a href="#">Link2</a></li>
-       <li><a href="#">Link3</a></li> 
-       <li><a href="#">Link4</a></li>
+       <li><a class="active" href="#">Home</a></li>
+       <li><a href="#">Internship</a></li>
+       <li><a href="#">Team</a></li> 
+       <li><a href="#">Testimonials</a></li>
      </ul>
    </nav>
  </div>
