--- a/internship platform/index1.html
+++ b/internship platform/index1.html
@@ -232,61 +232,38 @@
   </div>
 </div>
 <!-- footer -->
+
 <footer>
-      <div class="main-content"  data-aos="fade-up" data-aos-duration="6000">
-        <div class="left box">
-          <h2> Follow Us </h2>
-          <div class="content">
-              <div class="social">
-              <a href="#"><span class="fab fa-facebook-f"></span></a>
-              <a href="#"><span class="fab fa-twitter"></span></a>
-              <a href="#"><span class="fab fa-instagram"></span></a>
-              <a href="#"><span class="fab fa-youtube"></span></a>
-            </div>
-          </div>
-        </div>
-        <div class="center box"  data-aos="fade-up" data-aos-duration="6000">
-          <h2>Address</h2>
-          <div class="content">
-            <div class="place">
-              <span class="fas fa-map-marker-alt"></span>
-              <span class="text">123 street Colony District State 123 456</span>                  
-            </div>
-            <div class="phone">
-              <span class="fas fa-phone-alt"></span>
-              <span class="text">1234567890</span>
-            </div>
-            <div class="email">
-              <span class="fas fa-envelope"></span>
-              <span class="text">abc@example.com</span>
-            </div>
-          </div>
-        </div>
-        <div class="right box"  data-aos="fade-up" data-aos-duration="6000">
-          <h2>Contact us</h2>
-          <div class="content">
-            <form action="#">
-              <div class="email">
-                <div class="text">Email *</div>
-                <input type="email" required>
-              </div>
-              <div class="msg">
-                <div class="text">Message *</div>
-                <textarea rows="2" cols="25" required></textarea>
-              </div>
-              <div class="btn">
-                <button type="submit">Send</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-      <div class="bottom">
-        <center>
-          <span class="far fa-copyright"></span><span> 2020 All rights reserved.</span>
-        </center>
-      </div>
-    </footer>
+  <div class="footer1">
+    <div class="sec1">
+      <h2 class="head">Company Name</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quas voluptatibus amet sequi necessitatibus odit rem soluta? </p>
+    </div>
+    <div class="sec1">
+      <h2 class="head ">Address</h2>
+      <address class="fas fa-map-marker-alt">  123 street Colony , District State , 123456</address>
+      <a href="tel:8956564546" class="fas fa-phone-alt">  9654656454</a>  <br>
+      <a href="mailto:abc@example.com" class="fas fa-envelope">  abc@example.com</a>
+    </div>
+    <div class="sec1">
+      <h2 class="head">Follow Us</h2>
+      <a href="#" class="social fab fa-facebook-f"> </a>
+      <a href="#" class="social fab fa-twitter"> </a>
+      <a href="#" class="social fab fa-instagram"> </a>
+      <a href="#" class="social fab fa-youtube"> </a>
+    </div>
+    <div class="sec1">
+      <h2 class="head">Contact Us</h2>
+      <form action="">
+        <p class="email">Email <br> <input type="email" name="Email ID" placeholder="john@abc.com" required ></p>
+        <p class="text">Message <br> <input type="text" name="Message" placeholder="Your Message Here" required></p>
+        <button class="submit">Submit</button>
+
+      </form>
+    </div>
+  </div>
+</footer>
+  
 
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
