--- a/internship platform/index1.html
+++ b/internship platform/index1.html
@@ -19,19 +19,18 @@
 <body>
  
 <!-- navbar -->
-<div class="container">
-  <nav>
-     <label id="icon">
-          <i class="fas fa-bars"></i> 
-     </label>
-     <ul>
-       <li><a class="active" href="#showb">Home</a></li>
-       <li><a href="#internships">Internship</a></li>
-       <li><a href="#teams">Team</a></li> 
-       <li><a href="#testimonial">Testimonials</a></li>
-     </ul>
-   </nav>
- </div>
+ <nav>
+        <input type="checkbox" id="click">
+        <label for="click" class="menu-btn">
+          <i class="fas fa-bars"></i>
+        </label>
+        <ul>
+          <li><a href="#showb" class="active">Home</a></li>
+          <li><a href="#internships">Internships</a></li>
+          <li><a href="#teams">Team</a></li>
+          <li><a href="#testimonial">Testimonials</a></li>
+        </ul>
+     </nav>
   <!--login form-->
   <input type="checkbox" id="showb">
         <label for="showb" class="btn-show">SignUp/Login</label>
