--- a/Training Website/index.html
+++ b/Training Website/index.html
@@ -157,11 +157,12 @@
                 <img src="images/image_processing20201202-31245-1hyedqz.gif" alt="">
             </div>
             <div class="left_sec">
+                <h2>FEEDBACK FORM</h2>
                 <form action="">
                     <input type="text" placeholder="Name"> <br>
                     <input type="tel" placeholder="Mobile No"> <br>
                     <input type="email" placeholder="Email ID"> <br>
-                    <h2>Select your Expertise</h2>
+                    <h3>Select your Expertise</h3>
                         <label for="courses">Courses</label>
                         <select class="my-course">
                             <option value="d1" selected>- - - - - -Select- - - - - -</option>
