--- a/Training Website/index.html
+++ b/Training Website/index.html
@@ -147,6 +147,38 @@
        
     </div>
 
+    </div>
+
+    <!-- feedback -->
+
+    <div id="feedback">
+        <div class="container3">
+            <div class="right_sec">
+                <!-- <h2>Feel free to drop us your feedback.</h2> -->
+                <img src="images/image_processing20201202-31245-1hyedqz.gif" alt="">
+            </div>
+            <div class="left_sec">
+                <h2>FEEDBACK FORM</h2>
+                <form action="">
+                    <input type="text" placeholder="Name"> <br>
+                    <input type="tel" placeholder="Mobile No"> <br>
+                    <input type="email" placeholder="Email ID"> <br>
+                    <h3>Select your Expertise</h3>
+                        <label for="courses">Courses</label>
+                        <select class="my-course">
+                            <option value="d1" selected>- - - - - -Select- - - - - -</option>
+                            <option value="d1">A.I./ML</option>
+                            <option value="d1">Frontend-HTML/CSS</option>
+                            <option value="d2">Frontend-React</option>
+                            <option value="d3">Backend-NodeJs</option>
+                            <option value="d3">Backend-PHP</option>
+                            <option value="d4">Python</option>
+                            <option value="d5">Android Development</option>
+                            <option value="d6">Other</option>
+                            
+                        </select>
+
+
 
 
     <div id="feedback">
