--- a/internship platform/index1.html
+++ b/internship platform/index1.html
@@ -22,7 +22,7 @@
 <div class="container">
   <nav>
      <label id="icon">
-          <i class="fas fa-bars"></i> 
+          <i class="fas fa-bars show" ></i> 
      </label>
      <ul>
        <li><a class="active" href="#">Home</a></li>
@@ -100,7 +100,7 @@
                 </div>
             </div>
         </div>
-<!-- sec1 -->
+<!------ sec1 ----->
   <div id="section1">
     <div id="form">
       <div class="form_container">
