--- a/internship platform/index1.html
+++ b/internship platform/index1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Internship Platform</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
@@ -33,7 +33,7 @@
      </nav>
   <!--login form-->
   <input type="checkbox" id="showb">
-        <label for="showb" class="btn-show">SignUp/Login</label>
+        <label for="showb" class="btn-show">SignUp/SignIn</label>
         <div class="login">
             <label for="showb" class="close-btn fas fa-times"></label>
             <div class="login__content">
