--- a/Career Page/index.html
+++ b/Career Page/index.html
@@ -43,7 +43,7 @@
         <div class="banner">
           <h1>Let's grow together</h1>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-          <button>explore</button>
+          <button type="button">explore</button>
         </div>
       </header>
 
@@ -76,19 +76,19 @@
         <div class="job">
           <h3>Full Stack Developer</h3>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-          <button>Apply</button>         
+          <button type="button">Apply</button>         
         </div>
 
         <div class="job">          
           <h3>JAngular Developer</h3>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-          <button>Apply</button>
+          <button type="button">Apply</button>
         </div>
 
         <div class="job">          
           <h3>Big Data Developer</h3>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-          <button>Apply</button>
+          <button type="button">Apply</button>
         </div>       
         </div>
         </div>
@@ -190,7 +190,7 @@
                 "Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Asperiores, impedit!"
               </p>
-              <button>Read More</button>
+              <button type="button">Read More</button>
             </div>
           </div>
           <div class="card" data-tilt>
@@ -204,7 +204,7 @@
                 "Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Asperiores, impedit!"
               </p>
-              <button>Read More</button>
+              <button type="button">Read More</button>
             </div>
           </div>
           <div class="card" >
@@ -218,11 +218,25 @@
                 "Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Asperiores, impedit!"
               </p>
-              <button>Read More</button>
+              <button type="button">Read More</button>
             </div>
           </div>
         </div>
       </section>
+
+      <footer class="footer">
+        <div class="footer-content">
+          <p class="copyright">
+            Copyright &copy; 2020 - All Rights Reserved
+          </p>
+          <div class="social-list">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </div>
+        </div>
+      </footer>
+
       <a href="#" class="scroll-btn">
         <i class="fas fa-arrow-up"></i>
       </a>
